working-redis-on-readonly-kubernities-cluster/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  type: NodePort 
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
