working-redis-on-readonly-kubernities-cluster/redis-exposed-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master-exposed
  labels:
    app: redis
    role: master
    tier: backend
spec:
  type: NodePort
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
    tier: backend
