working-redis-on-readonly-kubernities-cluster/ingress-frontend-exposed.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: redis-frontend-ingress
spec:
  backend:
    serviceName: frontend
    servicePort: 80
