working-redis-on-readonly-kubernities-cluster/ingress-frontend.yaml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress-rules
spec:
  rules:
  - host: guestbook.trickfy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
